firebaseへホスティング

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>hirokichiのポートフォリオサイト</title>
+    <title>hirokichiの部屋</title>
     <link rel="icon" href="favicon.ico">
-    <meta name="description" content="hirokichiのポートフォリオサイトです。">
+    <meta name="description" content="hirokichiの部屋です。">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -27,7 +27,6 @@
                     <li>
                         <a href="https://twitter.com/Nothing_To__" target="_blank">
                             <img src="img/photos.png" width="20" height="20" alt="twitterへのリンク画像です">
-
                         </a>
                     </li>
                 </ul>
@@ -60,7 +59,7 @@
 
     </section>
     <footer>
-        <p>(c) hirokichi.com</p>
+        <p>(c) hirokichi1992.com</p>
     </footer>
 </body>
 
