ダウンロードデモサイト・おみくじアプリを追加

--- a/index.html
+++ b/index.html
@@ -39,22 +39,20 @@
         <h1>WORKS</h1>
 
         <section>
-            <img src="img/work1.png" width="400" heigth="260" alt="勇者ゲームの紹介画像">
+            <a href="https://myomikujiproject-e369d.web.app/" target="_blank">
+                <img src="img/omikuji.png" width="400" heigth="260" alt="おみくじアプリへのリンク画像です">
+            </a>
             <!-- セクション内で一番大きな見出し→<h1> -->
-            <h1>勇者ゲーム</h1>
-            <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
+            <h1>おみくじ</h1>
+            <p>おみくじを引くことができるアプリです。Javascriptの勉強の為作成しました。おみくじを引くと今日の運勢を占うことができます。また、一言メッセージが表示されます。今日1日を占ってみましょう！</p>
         </section>
 
         <section>
-            <img src="img/work2.png" width="400" heigth="260" alt="宝探しゲームの紹介画像">
-            <h1>宝探しゲーム</h1>
-            <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
-        </section>
-
-        <section>
-            <img src="img/work3.png" width="400" heigth="260" alt="神経衰弱の紹介画像">
-            <h1>神経衰弱</h1>
-            <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
+            <a href="https://myawesomeappproject-b1c54.web.app/" target="_blank">
+                <img src="img/MyAwesomeApp.png" width="400" heigth="260" alt="ダウンロードデモサイトへのリンク画像です">
+            </a>
+            <h1>ダウンロードデモサイト</h1>
+            <p>アプリのダウンロードデモサイトです。デモなので何もダウンロードできません。レスポンシブ対応です。HTML/CSSの勉強の為作成しました。</p>
         </section>
 
     </section>
