ストップウォッチアプリを追加、画像・アイコン修正追加

--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
     <header>
         <div class="container">
             <div class="icon">
-                <img src="img/taro.png" width="120" height="120" alt="hirokichiのアイコンです">
+                <img src="img/hiroki.png" width="120" height="120" alt="hirokichiのアイコンです">
             </div>
             <div class="info">
                 <h1>hirokichi1992</h1>
-                <p>WEBエンジニア見習いです</p>
+                <p>岡山 / Web / PHPer</p>
+                <p>Web系バックエンドエンジニアのフロントサイドお勉強用ポートフォリオサイトです。</p>
                 <ul>
                     <li>
                         <a href="https://github.com/hirokichi1992" target="_blank">
-                            <img src="img/blog.png" width="20" height="20" alt="githubへのリンク画像です">
+                            <img src="img/GitHub.png" width="30" height="30" alt="Githubへのリンク画像です">
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/Nothing_To__" target="_blank">
-                            <img src="img/photos.png" width="20" height="20" alt="twitterへのリンク画像です">
+                            <img src="img/Twitter.png" width="30" height="30" alt="Twitterへのリンク画像です">
                         </a>
                     </li>
                 </ul>
@@ -44,7 +45,7 @@
             </a>
             <!-- セクション内で一番大きな見出し→<h1> -->
             <h1>おみくじ</h1>
-            <p>おみくじを引くことができるアプリです。Javascriptの勉強の為作成しました。おみくじを引くと今日の運勢を占うことができます。また、一言メッセージが表示されます。今日1日を占ってみましょう！</p>
+            <p>おみくじを引くことができるアプリです。Javascript勉強の為作成しました。おみくじを引くと今日の運勢を占うことができます。また、一言メッセージが表示されます。今日1日を占ってみましょう！</p>
         </section>
 
         <section>
@@ -52,12 +53,20 @@
                 <img src="img/MyAwesomeApp.png" width="400" heigth="260" alt="ダウンロードデモサイトへのリンク画像です">
             </a>
             <h1>ダウンロードデモサイト</h1>
-            <p>アプリのダウンロードデモサイトです。デモなので何もダウンロードできません。レスポンシブ対応です。HTML/CSSの勉強の為作成しました。</p>
+            <p>アプリのダウンロードデモサイトです。デモなので何もダウンロードできません。レスポンシブ対応です。HTML/CSS勉強の為作成しました。</p>
+        </section>
+
+        <section>
+            <a href="https://stopwatch-e1b85.web.app/" target="_blank">
+                <img src="img/Stopwatch.png" width="400" heigth="260" alt="ストップウォッチアプリへのリンク画像です">
+            </a>
+            <h1>ストップウォッチ</h1>
+            <p>なんの変哲もないストップウォッチです。1秒ちょうどを狙いましょう。Javascript勉強の為作成しました。</p>
         </section>
 
     </section>
     <footer>
-        <p>(c) hirokichi1992.com</p>
+        <p>(c) hirokichi1992</p>
     </footer>
 </body>
 
